[package]
name = "r6502"
version = "1.1.0"
authors = ["baltdev"]
edition = "2021"
description = "A simple MOS 6502 emulator."
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/r6502"
repository = "https://github.com/balt-dev/r6502/"
rust-version = "1.66.1"
categories = ["no-std", "no-std::no-alloc", "emulators"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bitflags = "2"

bytemuck = {version = "1", features = ["derive", "min_const_generics"], optional = true}
arbitrary = {version = "1", features = ["derive"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_with = {version = "3", optional = true, default-features = false, features = ["macros"]}

[features]
default = ["bcd"]
bcd = []
bytemuck = ["dep:bytemuck", "bitflags/bytemuck"]
arbitrary = ["dep:arbitrary", "bitflags/arbitrary"]
serde = ["dep:serde", "dep:serde_with", "bitflags/serde"]
